@@ -5,9 +5,14 @@ jEdit 5.1 version history
 {{{ Version 5.1pre1
 
 Thanks to Jarek Czekalski, Thomas Meyer, Matthieu Casanova, Alan Ezust,
-Malathi, Vladimir Avdonin and Eric Le Lay for contributing to this release.
+Malathi, Vladimir Avdonin, Eric Le Lay and Maik Nijhuis
+for contributing to this release.
 
 {{{ Bug fixes
+
+- Undo restores selection state in simple cases (deletions, replaces
+  on simple range selections). (patch #1570553 Maik Nijhuis, Thomas Meyer,
+  Jarek Czekalski)
 
 - Added a right click popup menu with a copy action in the Error dialog
   (#3557023 Matthieu Casanova)
